--- a/scss/exalted-styling.scss
+++ b/scss/exalted-styling.scss
@@ -750,6 +750,7 @@ footer
     }
     .swiper-button-next, .swiper-button-prev
     {
+        font-size: 2.5rem;
         i
         {
             opacity: .75;
